--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "joi": "^13.1.2",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.5",
+    "nodemailer": "^4.6.8",
     "oracledb": "^2.2.0",
     "promise-ftp": "^1.3.5",
     "promise-mysql": "^3.2.1",
